--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ main {
   background-color: var(--darkgrey);
   min-width: 400px;
   height: auto;
-  border-radius: 1rem;
+  border-radius: 0.7rem;
   text-align: center;
 }
 
@@ -81,4 +81,11 @@ p {
   background-color: var(--green);
   color: var(--grey);
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  main {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
 }
