--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ p {
 
 @media (max-width: 768px) {
   main {
-    padding-right: 2rem;
-    padding-left: 2rem;
+    margin-right: 5rem;
+    margin-left: 5rem;
   }
 }
